force-app/main/default/objects/Community_Task_Group_Assignment__mdt.object
<CustomObject>
    <fields>
        <fullName>Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to activate and deactivate a task instead of completely deleting the task. This field helps in displaying only the active Tasks on the component</description>
        <label>Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Community_Task_Group__mdt</referenceTo>
        <relationshipLabel>Community Task Group Assignments</relationshipLabel>
        <relationshipName>Community_Task_Group_Assignments</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>Community_Task__mdt</referenceTo>
        <relationshipLabel>Community Task Group Assignments</relationshipLabel>
        <relationshipName>Community_Task_Group_Assignments</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Community Task Group Assignment</label>
    <pluralLabel>Community Task Group Assignments</pluralLabel>
</CustomObject>